force-app/main/default/objects/Vehicle__c/fields/Convenience_Package__c.field-meta.xml
<CustomField>
    <label>Convenience Package</label>
    <type>Checkbox</type>
    <fullName>Convenience_Package__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>