force-app/main/default/objects/Vehicle__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <label>Engine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T5 FWD</fullName>
            </value>
            <value>
                <fullName>T5 AWD</fullName>
            </value>
            <value>
                <fullName>T6 AWD</fullName>
            </value>
            <value>
                <fullName>T8 eAWD Plug-in Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>