force-app/main/default/objects/Vehicle__c/fields/Hybrid__c.field-meta.xml
<CustomField>
    <label>Hybrid</label>
    <type>Checkbox</type>
    <fullName>Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>