force-app/main/default/objects/Vehicle__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amber Leather in Charcoal</fullName>
            </value>
            <value>
                <fullName>Blond Leather in Blond/Charcoal Interior</fullName>
                <default>true</default>
                <label>Blond Leather in Blond/Charcoal Interior</label>
            </value>
            <value>
                <fullName>Charcoal Leather in Charcoal Interior</fullName>
            </value>
            <value>
                <fullName>Amber Nappa Leaher w/ Contour Seats in Charcoal Interior</fullName>
            </value>
            <value>
                <fullName>Blond Leather w/ Contour Seats in Blond/Charcoal Interior</fullName>
            </value>
            <value>
                <fullName>Charcoal Nappa Leather w/ Contour Seats in Charcoal Interior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>