force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <defaultValue>&#39;Flash&#39;</defaultValue>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S90</fullName>
            </value>
            <value>
                <fullName>S60</fullName>
            </value>
            <value>
                <fullName>XC90</fullName>
            </value>
            <value>
                <fullName>XC60</fullName>
            </value>
            <value>
                <fullName>XC40</fullName>
            </value>
            <value>
                <fullName>V90 Cross Country</fullName>
            </value>
            <value>
                <fullName>V90</fullName>
            </value>
            <value>
                <fullName>V60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>