force-app/main/default/objects/Vehicle__c/fields/Momentum_Plus_Package__c.field-meta.xml
<CustomField>
    <label>Momentum Plus Package</label>
    <type>Checkbox</type>
    <fullName>Momentum_Plus_Package__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>