force-app/main/default/objects/Vehicle__c/fields/Protection_Package_Premier__c.field-meta.xml
<CustomField>
    <label>Protection Package Premier</label>
    <type>Checkbox</type>
    <fullName>Protection_Package_Premier__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>