force-app/main/default/objects/Vehicle__c/fields/Wheels__c.field-meta.xml
<CustomField>
    <fullName>Wheels__c</fullName>
    <label>Wheels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19" 10-Spoke Turbine Silver Bright Alloy Wheels</fullName>
                <default>true</default>
                <label>19" 10-Spoke Turbine Silver Bright Alloy Wheels</label>
            </value>
            <value>
                <fullName>20" 5-Double Spoke Matte Tech Black Alloy Wheels</fullName>
            </value>
            <value>
                <fullName>21” 5 V-Spoke Black Diamond Cut Alloy Wheels</fullName>
            </value>
            <value>
                <fullName>22" 6-Double Spoke Matte Tech Black Diamond Cut Alloy Wheels w/Summer Performance Tires*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>